2008-02-11  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_devices): don't put the Edit Wireless Networks item here
		- (nma_context_menu_create): move the Edit Wireless Networks item here
		- (nma_menu_add_edit_essid_item): remove

2008-02-08  Tambet Ingo  <tambet@gmail.com>

	* src/nm-gconf-wso-wpa-eap.c: Save to gconf which passwords we should have.

2008-01-30  Tambet Ingo  <tambet@gmail.com>

	Sort wireless networks in the list.

	* editor/editor-app.c (sort_networks): Implement.
	(setup_dialog): Add sort function to the list store.
	(populate_model): Sort the model.

2008-01-30  Tambet Ingo  <tambet@gmail.com>

	Implement wireless network editor.

	* Makefile.am: Add editor to build.

	* src/main.c: Remove a compiler warning.

	* src/wso-wep-hex.c (widget_create_func): Ditto.

	* src/wso-wep-ascii.c (widget_create_func): Ditto.

	* src/applet.c (edit_essid_items_selected) 
	(nma_menu_add_edit_essid_item): Implement.
	(nma_menu_add_devices): Add the editor item to the menu.

	* editor/*: Implement.

2008-01-30  Tambet Ingo  <tambet@gmail.com>

        Implement 802.1x wired authentication.

2008-01-29  Tambet Ingo  <tambet@gmail.com>

	* src/nm-gconf-wso.c (real_write_secrets): Don't use a blocking gnome-keyring
	call when writing the secrets, it grabs the X pointer if the menu happens to
	be expanded at the time keyring asks for the master password, deadlocking the
	whole session.

	* src/nm-gconf-wso-wpa-eap.c (real_write_secrets): Ditto.

	* src/Makefile.am: Remove the 'DISABLE_DEPRECATED' define, otherwise it does
	not compile on GTK 2.12 anymore (GtkTooltips is deprecated there).

2008-01-29  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (nma_show_info_cb): Remove a warning.
	(nma_set_wireless_enabled_cb): Save the wireless state in gconf.
	(nma_set_networking_enabled_cb): Save the network enabled/disabled state in
	gconf.
	(update_network_state): Update the state of wireless and network to what's
	saved in gconf.