@@ -1,5 +1,10 @@
 2008-02-11  Dan Williams  <dcbw@redhat.com>
 
+	* editor/editor-app.c
+		- (populate_model): don't crash on invalid networks, ignore them instead
+
+2008-02-11  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (nma_menu_add_devices): don't put the Edit Wireless Networks item here
 		- (nma_context_menu_create): move the Edit Wireless Networks item here
